# fcc-jet-identification

./: .gitignore  README.md  pyproject.toml
notebooks/: Jet_img_test.py  X_16.npy  X_4.npy  autoencoder_qcnn.ipynb  autoencoder_test.ipynb  bb_jet_identification.ipynb  bb_qcnn_classifier.model  classifier.model  dataset_example.ipynb  qcnn_param_names.npy  qcnn_test.ipynb  qcnn_weights.npy
runs/20251013_231658/: classifier.model
scripts/: train.py
src/jetimages/: bb_jet_image.py
src/qautoencoder/: qautoencoder.py
src/qcnn/: circuits.py  datasets.py  model.py
